test: full generation